syntax="proto3";
package records;


//service message
service Recorder{rpc SendMessage(RecordRequest) return (RecordResonse);}

message RecordRequest{
  string user_name =1;
  uint32 user_age =2;
}
message RecordResponse{
  bool successful = 1;
  string message =2;
}